Added API and created a freeMemory file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(newProject1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(newProject1 main.c BinFile.c BinFile.h ErrorsHandlings.c ErrorsHandlings.h MovesArray.c MovesArray.h MovesList.c MovesList.h PathCalculation.c PathCalculation.h PathFromFile.c PathFromFile.h tree.c tree.h Types.h List_Tests.c List_Tests.h Amitest.c Amitest.h Trash.c)
+add_executable(newProject1 main.c BinFile.c BinFile.h ErrorsHandlings.c ErrorsHandlings.h MovesArray.c MovesArray.h MovesList.c MovesList.h PathCalculation.c PathCalculation.h PathFromFile.c PathFromFile.h tree.c tree.h Types.h List_Tests.c List_Tests.h Amitest.c Amitest.h Trash.c FreeMemory.c FreeMemory.h)
